--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "changePath": "node config/base.config.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/VergilWang1/VergilWang1.github.io#readme",
   "devDependencies": {
+    "metalsmith": "^2.3.0",
     "vuepress": "^1.0.3"
   }
 }
